# kwbot

./: .gitignore  .helmignore  Chart.yaml  Dockerfile  README.md  main.py  pyproject.toml  values.yaml
.github/workflows/: build_publish.yml  lint_build.yml  workflow.yml
bot/: __init__.py
environments/default/: main.jsonnet
src/kw/: __init__.py  __main__.py
src/tests/: test_find_end_date_for_kw.py
templates/: deployment.yaml
